{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 72,
  "lineage": "d7708451-8967-b743-de5c-47201892c912",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-appsubnet",
            "location": "eastus",
            "name": "IT-dev-vnet-appsubnet",
            "resource_group_name": "IT-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_subnet.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-bastionsubnet",
            "location": "eastus",
            "name": "IT-dev-vnet-bastionsubnet",
            "resource_group_name": "IT-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_subnet.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-dbsubnet",
            "location": "eastus",
            "name": "IT-dev-vnet-dbsubnet",
            "resource_group_name": "IT-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-websubnets-nsg",
            "location": "eastus",
            "name": "IT-dev-vnet-websubnets-nsg",
            "resource_group_name": "IT-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-port-22",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-port-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule-port-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_subnet.websubnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app-nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-appsubnet/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "IT-dev-vnet-appsubnet",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.project2",
            "azurerm_subnet.app"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-appsubnet/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "IT-dev-vnet-appsubnet",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.project2",
            "azurerm_subnet.app"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-appsubnet/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "IT-dev-vnet-appsubnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.project2",
            "azurerm_subnet.app"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-appsubnet/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "IT-dev-vnet-appsubnet",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.project2",
            "azurerm_subnet.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion-nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-bastionsubnet/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "IT-dev-vnet-bastionsubnet",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion",
            "azurerm_resource_group.project2",
            "azurerm_subnet.bastion"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-bastionsubnet/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "IT-dev-vnet-bastionsubnet",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion",
            "azurerm_resource_group.project2",
            "azurerm_subnet.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db-nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-dbsubnet/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "IT-dev-vnet-dbsubnet",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db",
            "azurerm_resource_group.project2",
            "azurerm_subnet.db"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-dbsubnet/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "IT-dev-vnet-dbsubnet",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db",
            "azurerm_resource_group.project2",
            "azurerm_subnet.db"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-dbsubnet/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "IT-dev-vnet-dbsubnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db",
            "azurerm_resource_group.project2",
            "azurerm_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-websubnets-nsg/securityRules/Rule-port-80",
            "name": "Rule-port-80",
            "network_security_group_name": "IT-dev-vnet-websubnets-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.project2",
            "azurerm_subnet.websubnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-websubnets-nsg/securityRules/Rule-port-443",
            "name": "Rule-port-443",
            "network_security_group_name": "IT-dev-vnet-websubnets-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.project2",
            "azurerm_subnet.websubnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-websubnets-nsg/securityRules/Rule-port-22",
            "name": "Rule-port-22",
            "network_security_group_name": "IT-dev-vnet-websubnets-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "IT-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.project2",
            "azurerm_subnet.websubnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-appsubnet",
            "name": "IT-dev-vnet-appsubnet",
            "resource_group_name": "IT-dev",
            "virtual_network_name": "IT-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-bastionsubnet",
            "name": "IT-dev-vnet-bastionsubnet",
            "resource_group_name": "IT-dev",
            "virtual_network_name": "IT-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-dbsubnet",
            "name": "IT-dev-vnet-dbsubnet",
            "resource_group_name": "IT-dev",
            "virtual_network_name": "IT-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-websubnets",
            "name": "IT-dev-vnet-websubnets",
            "resource_group_name": "IT-dev",
            "virtual_network_name": "IT-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.project2",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "appsubnet-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-appsubnet",
            "subnet_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_network_security_rule.app-nsg-rule",
            "azurerm_resource_group.project2",
            "azurerm_subnet.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastionsubnet-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-bastionsubnet",
            "subnet_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion",
            "azurerm_network_security_rule.bastion-nsg-rule",
            "azurerm_resource_group.project2",
            "azurerm_subnet.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dbsubnet-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-dbsubnet",
            "subnet_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db",
            "azurerm_network_security_rule.db-nsg-rule",
            "azurerm_resource_group.project2",
            "azurerm_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "websubnet-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-websubnets",
            "network_security_group_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-websubnets-nsg",
            "subnet_id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-websubnets"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_network_security_rule.nsg-rule",
            "azurerm_resource_group.project2",
            "azurerm_subnet.websubnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "52fbc247-1dd1-4deb-a339-38bc6e1cf7c6",
            "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet",
            "location": "eastus",
            "name": "IT-dev-vnet",
            "resource_group_name": "IT-dev",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-websubnets",
                "name": "IT-dev-vnet-websubnets",
                "security_group": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/networkSecurityGroups/IT-dev-vnet-websubnets-nsg"
              },
              {
                "address_prefix": "10.0.100.0/24",
                "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-bastionsubnet",
                "name": "IT-dev-vnet-bastionsubnet"
              },
              {
                "address_prefix": "10.0.11.0/24",
                "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-appsubnet",
                "name": "IT-dev-vnet-appsubnet"
              },
              {
                "address_prefix": "10.0.21.0/24",
                "id": "/subscriptions/242d5020-c32a-4edc-8f1d-002a28e4ca1b/resourceGroups/IT-dev/providers/Microsoft.Network/virtualNetworks/IT-dev-vnet/subnets/IT-dev-vnet-dbsubnet",
                "name": "IT-dev-vnet-dbsubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.project2"
          ]
        }
      ]
    }
  ]
}